Fixing bug in Resolve-DependenciesFromAzureFeed that downloaded all apps from first lvl (Thanks jonaswer)
Remove countries which have their own artifacts from mapCountryCode
Add Windows 11 / ltsc2022 support
Run-AlValidation sometimes returns error AL1040: The guid number '' does not match the expected pattern: "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$".

2.0.15
Default to process isolation when Host OS is 21H1 and Container OS is 2004
New-BcEnvironment should not enumerate companies and users if -doNotWait is specified
Issue #1979 Add DOCKER_SCAN_SUGGEST to configuration (default false) and set corresponding environment variable
Issue #1998 New-BCContainer ERROR: Database Backup File not found. when hosthelper folder changed
Issue #2003 Change GenerateReportLayout default to 'No' in Run-AlValidation and Run-AlCops
Issue #2006 spelling mistake
Issue #2014 telemetryclient cannot be initialized
Issue #2008 Run-ALValidation - InstallApps/SortByDependencies
Issue #2018 Create .net Assembly Reference folder when using filesonly and includeAL

2.0.14
Issue #1967 add parameter IncludeApiAccess to Create-AadAppsForBC to ensure that API permissions are only added when needed

2.0.13
Allow absolute GenericImageName in config (no reference to host OS)
Application errors in are thrown as errors in ClientContext (Run-TestsInBcContainer) (thanks @hemisphera)
Add support for remote SQL Servers in Remove-BcDatabase and Restore-BcDatabaseFromArtifacts (thanks Remko and Theo)
Issue #1941 XML validation error leads to warnings instead of errors in Compile-AppInBcContainer
Update generic tag list in Get-BestGenericImageName
Default to build 19041 if 19043 doesn't exist (as 19041 is found to work better with 21H1)
Issue #1944 Extract-AppFileToFolder doesn't handle special characters in manifest correctly
Issue #1933 Run-ALValidation fails sometimes with single installApps and multiple apps specified